test/corpus/assignment.txt
===========
Assignments
===========

a := 3;
b := "hello";
c := 3 + (4 * 5);
d := [1, 2, 3];

---

(module
    (assignment (identifier) (number))
    (assignment (identifier) (string))
    (assignment (identifier)
        (binary_exp (number)
            (binary_exp (number) (number))))
    (assignment (identifier)
        (list (number) (number) (number))))
