test/corpus/async.txt
=====
Async
=====

await foo
yield
yield 2
launch f(1)

---

(module
    (statement (await (identifier)))
    (statement (yield))
    (statement (yield (number)))
    (statement (launch (call (identifier) (number)))))
