test/corpus/block.txt
======
Blocks
======

{ pi };
{ pi; 3+4 };
{ pi; 3+4; }

---

(module
    (block (identifier))
    (block (identifier) (binary_exp (number) (number)))
    (block (identifier) (binary_exp (number) (number))))
