test/corpus/conditionals.txt
============
Conditionals
============

if true {3};
if true {3} else {4};
if false {3} else {4};
if 3 + 4 == 7 {1} else {0};
1 or 2;
1 and 2;

---

(module
    (statement (ifs (if (bool) (block (statement (number))))))
    (statement (ifs (if (bool) (block (statement (number))))
        (block (statement (number)))))
    (statement (ifs (if (bool)
        (block (statement (number))))
        (block (statement (number)))))
    (statement (ifs (if
        (binary_exp
            (binary_exp (number) (number))
            (number))
        (block (statement (number))))
        (block (statement (number)))))
    (statement (binary_exp (number) (number)))
    (statement (binary_exp (number) (number))))
