test/corpus/for.txt
=========
For loops
=========

for x in l.iterator() {
    tot := tot + x
}

---

(module
    (statement (for (identifier)
         (call (property_exp (identifier) (property_identifier)))
         (block (statement (assignment
             (identifier)
             (binary_exp (identifier) (identifier))))))))
