test/corpus/function.txt
=========
Functions
=========

let f = fn(x) {x + 1}; f(1)

---

(module
    (statement (let
        (identifier)
        (fn
            (params (identifier))
            (block (statement
                (binary_exp
                (identifier)
                (number)))))))
    (statement (call (identifier) (number)))
)
