test/corpus/generator.txt
==========
Generators
==========

let f = gen(x) {yield x + 1}; f(1)

---

(module
    (statement (let
        (identifier)
        (fn
            (params (identifier))
            (block (statement
                (yield
                    (binary_exp
                        (identifier)
                        (number))))))))
    (statement (call (identifier) (number)))
)
