test/corpus/map.txt
====
Maps
====

{"a": 1, "b": 2 + 0, 3: 4};
let t = {"a": 1, "b": 2 + 0, 3: 4}; t["b"] = 1; t

---

(module (sequence
    (map
        (string) (number)
        (string) (binary_exp (number) (number))
        (number) (number))
    (let
        (ident) (map
            (string) (number)
            (string) (binary_exp (number) (number))
            (number) (number)))
    (assignment
        (index_exp (ident) (string)) (number))
    (ident)))
